--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@types/node": "^25.2.2"
+    "@types/node": "^25.2.2",
+    "vue-tsc": "^3.2.4"
   }
 }
