--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^4.4.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.564.0",
     "nuxt": "^4.3.1",
+    "tailwind-merge": "^3.4.1",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^25.2.2",
+    "tailwindcss": "^4.1.18",
     "vue-tsc": "^3.2.4"
   }
 }
