--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^4.4.0",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.564.0",
     "nuxt": "^4.3.1",
